[gd_scene load_steps=23 format=3 uid="uid://yvrxwlkphehr"]

[ext_resource type="Texture2D" uid="uid://cfbnpa3dbvsgo" path="res://img/lumberjack.png" id="1_lsssv"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2_h1lyi"]
[ext_resource type="Texture2D" uid="uid://8hei0ynt5xed" path="res://img/weapons.png" id="3_j3n4j"]
[ext_resource type="Texture2D" uid="uid://crru0neuj76uq" path="res://img/slashes.png" id="4_5bn42"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_06jb4"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8hehf"]
animation = &"MediumSlash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nqoh5"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6d2xy"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_56e12"]
switch_mode = 1
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ki768"]
switch_mode = 1
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7n6ok"]
switch_mode = 1
advance_mode = 2
advance_condition = &"medium_slash"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3g2od"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jpem4"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_boe5c"]
switch_mode = 1
advance_mode = 2
advance_condition = &"medium_slash"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_da2e0"]
states/Idle/node = SubResource("AnimationNodeAnimation_06jb4")
states/Idle/position = Vector2(362, 94)
states/MediumSlash/node = SubResource("AnimationNodeAnimation_8hehf")
states/MediumSlash/position = Vector2(434, 171)
states/Start/position = Vector2(211, 100)
states/Walk/node = SubResource("AnimationNodeAnimation_nqoh5")
states/Walk/position = Vector2(502, 88)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_6d2xy"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_56e12"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_ki768"), "Walk", "MediumSlash", SubResource("AnimationNodeStateMachineTransition_7n6ok"), "MediumSlash", "Idle", SubResource("AnimationNodeStateMachineTransition_3g2od"), "MediumSlash", "Walk", SubResource("AnimationNodeStateMachineTransition_jpem4"), "Idle", "MediumSlash", SubResource("AnimationNodeStateMachineTransition_boe5c")]
graph_offset = Vector2(-96, 45)

[sub_resource type="Animation" id="Animation_5yk7u"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.2, 0.00172687, 1.02714, -0.2, -0.000806928, 0.2, 0.000806928, 1, -0.2, 0.0134271, 0, -0.000693738),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Weapons/WeaponPivot/Sprite2D:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../Weapons/WeaponPivot/Sprite2D:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1.09623, -0.25, 0, 0.25, 0, 1.346, -0.25, 0, 0.25, 0, 1.09623, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_8yrkh"]
length = 1.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Weapons/WeaponPivot/Sprite2D/SlashSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.05, 0.3, 0.55, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -0.0174533, -0.25, 0, 0.25, 0, -0.0174533, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.65, 0.75, 1.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Weapons:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1.91986, -0.25, 0, 0.25, 0, -0.872665, -0.25, 0, 0.25, 0, -0.872665, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.65, 0.9, 1.05, 1.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Weapons:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.174533, -0.25, 0, 0.25, 0, 0.174533, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.65, 0.9, 1.05, 1.5)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../Weapons/WeaponPivot/Sprite2D/SlashSprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -0.846485, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.65, 0.8)
}

[sub_resource type="Animation" id="Animation_7l6hw"]
resource_name = "MediumSlash"
length = 1.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Weapons/WeaponPivot/Sprite2D/SlashSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.05, 0.3, 0.55, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -0.0174533, -0.25, 0, 0.25, 0, -0.0174533, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.65, 0.75, 1.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Weapons:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -1.91986, -0.25, 0, 0.25, 0, 0.872665, -0.25, 0, 0.25, 0, 0.872665, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.65, 0.9, 1.05, 1.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Weapons:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.174533, -0.25, 0, 0.25, 0, 0.174533, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.65, 0.9, 1.05, 1.5)
}

[sub_resource type="Animation" id="Animation_5futr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Weapons:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Weapons:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../Weapons/WeaponPivot/Sprite2D:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../../Weapons/WeaponPivot/Sprite2D:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.09623, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../../Weapons/WeaponPivot/Sprite2D/SlashSprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("..:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../../Weapons:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../../Weapons:skew")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../../Weapons/WeaponPivot/Sprite2D/SlashSprite:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_d7687"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Weapons:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Weapons:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r0rhd"]
_data = {
"Idle": SubResource("Animation_5yk7u"),
"MediumSlashLeft": SubResource("Animation_8yrkh"),
"MediumSlashRight": SubResource("Animation_7l6hw"),
"RESET": SubResource("Animation_5futr"),
"Walk": SubResource("Animation_d7687")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utx3v"]
size = Vector2(12, 30)

[node name="Player" type="CharacterBody2D"]
position = Vector2(40, 48)
collision_layer = 2
collision_mask = 5
script = ExtResource("2_h1lyi")
sprintSpeed = 3
walkSpeed = 4

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, 16)
texture = ExtResource("1_lsssv")
offset = Vector2(0, -16)
hframes = 8

[node name="AnimTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource("AnimationNodeStateMachine_da2e0")
anim_player = NodePath("AnimationPlayer")
parameters/conditions/is_idle = false
parameters/conditions/is_moving = false
parameters/conditions/medium_slash = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/AnimTree"]
libraries = {
"": SubResource("AnimationLibrary_r0rhd")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_utx3v")
one_way_collision_margin = 0.0

[node name="Weapons" type="Node2D" parent="."]

[node name="WeaponPivot" type="Node2D" parent="Weapons"]

[node name="Sprite2D" type="Sprite2D" parent="Weapons/WeaponPivot"]
position = Vector2(0, 1.09623)
texture = ExtResource("3_j3n4j")
offset = Vector2(5, -2)
hframes = 4
frame = 1

[node name="SlashSprite" type="Sprite2D" parent="Weapons/WeaponPivot/Sprite2D"]
position = Vector2(13.0695, -2.4626)
texture = ExtResource("4_5bn42")
hframes = 5
vframes = 4

[node name="Area2D" type="Area2D" parent="Weapons/WeaponPivot/Sprite2D/SlashSprite"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Weapons/WeaponPivot/Sprite2D/SlashSprite/Area2D"]
visible = false
position = Vector2(-2, -3)
polygon = PackedVector2Array(0, -10, -4, -9, -6, -6, -5, -1, -6, 5, -4, 8, 5, 10, 10, 5, 10, -0.592121, 10, -6, 5, -10)
one_way_collision_margin = 0.0

[node name="SlashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SlashTimer" to="." method="_on_slash_timer_timeout"]
